testsuite/tests/parser/should_fail/T3811f.stderr

T3811f.hs:4:8: error:
    Strictness annotation applied to a compound type.
    Did you mean to add parentheses?
      !(Foo a)
